<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.aluno.utilidades.IMC_Activity">

    <TextView
        android:id="@+id/txtTitulo"
        android:text="@string/imc"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titulo_height"
        android:background="#ffc435"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="@dimen/titulo_sp"
        android:gravity="center"
        android:layout_marginBottom="@dimen/pop_marginBottom"/>

    <LinearLayout
        android:id="@+id/linearLayoutIMC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTitulo"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/pop_marginBottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/altura"/>
        <EditText
            android:id="@+id/edtAltura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/peso" />

        <EditText
            android:id="@+id/edtPeso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_weight="1"/>

    </LinearLayout>
    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_calcular"
        android:layout_below="@+id/linearLayoutIMC"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:id="@+id/txtResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="IMC"
        android:layout_below="@id/btnCalcular"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/pop_marginBottom"/>
    <TextView
        android:id="@+id/txtResultado2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="RESULTADO"
        android:layout_below="@id/txtResultado"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/pop_marginBottom"/>


</RelativeLayout>
