<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.aluno.utilidades.PopulacaoActivity">

    <TextView
        android:id="@+id/txtTitulo"
        android:text="@string/cresc_pop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/titulo_height"
        android:background="#1E90FF"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:textSize="@dimen/titulo_sp"
        android:gravity="center"
        android:layout_marginBottom="@dimen/pop_marginBottom"/>

    <TextView
        android:id="@+id/txtPopulacao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pop_mundial"
        android:layout_below="@+id/txtTitulo"/>

    <EditText
        android:id="@+id/edtPopulacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_below="@id/txtPopulacao"/>

    <LinearLayout
        android:id="@+id/linearLayoutPopulacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtPopulacao"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/pop_marginBottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/indice"/>
        <EditText
            android:id="@+id/edtIndice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anos" />

        <EditText
            android:id="@+id/edtAnos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_weight="1"/>

    </LinearLayout>
    <Button
        android:id="@+id/btnEstimar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_estimar"
        android:layout_below="@+id/linearLayoutPopulacao"
        android:layout_centerHorizontal="true"/>
<TableLayout
    android:id="@+id/tableLayoutCabecalho"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/btnEstimar"
    android:stretchColumns="0,1,2"
    android:background="#dd990a"
    android:paddingTop="5dp"
    android:paddingBottom="5dp">
    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ano"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="População"
            android:textColor="#FFFFFF"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Crescimento"
            android:textColor="#FFFFFF"/>

    </TableRow>

</TableLayout>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/tableLayoutCabecalho"
        android:isScrollContainer="true">
            <TableLayout
                android:id="@+id/tableLayoutDados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="0,1,2">
                <!-- as linhas são inseridas via programação -->


            </TableLayout>
    </ScrollView>

    </RelativeLayout>
